@@ -43,6 +43,25 @@ RestBaseHandler::RestBaseHandler(GeneralRequest* request,
                                  GeneralResponse* response)
     : RestHandler(request, response) {}
 
+////////////////////////////////////////////////////////////////////////////////
+/// @brief parses the body as VelocyPack
+////////////////////////////////////////////////////////////////////////////////
+
+std::shared_ptr<VPackBuilder> RestBaseHandler::parseVelocyPackBody(
+    VPackOptions const* options, bool& success) {
+  try {
+    success = true;
+    return _request->toVelocyPackBuilderPtr(options);
+  } catch (VPackException const& e) {
+    std::string errmsg("VPackError error: ");
+    errmsg.append(e.what());
+    generateError(rest::ResponseCode::BAD, TRI_ERROR_HTTP_CORRUPTED_JSON,
+                  errmsg);
+  }
+  success = false;
+  return std::make_shared<VPackBuilder>();
+}
+
 void RestBaseHandler::handleError(Exception const& ex) {
   generateError(GeneralResponse::responseCode(ex.code()), ex.code(), ex.what());
 }
