@@ -32,6 +32,7 @@ namespace arangodb {
 class TransactionContext;
 
 namespace velocypack {
+class Builder;
 struct Options;
 class Slice;
 }
@@ -66,6 +67,9 @@ class RestBaseHandler : public rest::RestHandler {
   void generateCanceled();
 
  protected:
+  /// @brief parses the body as VelocyPack
+  std::shared_ptr<arangodb::velocypack::Builder> parseVelocyPackBody(arangodb::velocypack::Options const*, bool&);
+
   template <typename Payload>
   void writeResult(Payload&&, arangodb::velocypack::Options const& options);
 };
