@@ -266,12 +266,6 @@ class RestVocbaseBaseHandler : public RestBaseHandler {
 
   bool extractBooleanParameter(char const* name, bool def) const;
 
-  //////////////////////////////////////////////////////////////////////////////
-  /// @brief parses the body as VelocyPack
-  //////////////////////////////////////////////////////////////////////////////
-
-  std::shared_ptr<VPackBuilder> parseVelocyPackBody(VPackOptions const*, bool&);
-
  protected:
   //////////////////////////////////////////////////////////////////////////////
   /// @brief request context
